# GDHS

./: .gitignore  readme.md
Agentic-AI/: main.py  pyproject.toml  requirements.txt  run_server.py
Agentic-AI/agents/: __init__.py  clinical_analysis.py  diagnosis.py  hand.py  handlers.py  hospitals.py  leg.py  pdf_report.py  report.py  router.py  triage.py
Agentic-AI/api/: __init__.py  analyze.py  annotated.py  chat.py  clinical_analysis.py  health.py  main.py  metrics.py  metrics_router.py  middleware.py  pdf_reports.py
Agentic-AI/app/: config.py
Agentic-AI/app/mcp/: server.py
Agentic-AI/frontend/: README.md  index.html  script.js  style.css
Agentic-AI/schemas/: __init__.py  base.py  chat.py  orchestrator.py
Agentic-AI/services/: __init__.py  body_part_detector.py  chat_manager.py  cloudinary_service.py  error_handler.py  groq_service.py  mcp_tools.py  model_registry.py  orchestrator.py  policies.py  prompt_templates.py  security.py  storage.py  telemetry.py
Agentic-AI/services/validation/: __init__.py  consent_validator.py  exceptions.py  image_validator.py
NEXT/: .gitignore  AUDIO_SETUP.md  VOICE_AGENT_IMPLEMENTATION.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
NEXT/app/: globals.css  layout.tsx  page.tsx
NEXT/components/: ai-loader.tsx  audio-chat.tsx  dashboard-sidebar.tsx  footer.tsx  glassmorphism-theme-selector.tsx  hero-scroll-demo.tsx  markdown-renderer.tsx  navbar.tsx  ortho-sidebar.tsx  premium-theme-toggle.tsx  role-guard.tsx  theme-toggle.tsx  upload-history.tsx  use-cases-3d.tsx
NEXT/docs/: CHAT_SYSTEM.md  (+4 more)
(+62 files in other folders)
